# interpolars

./: .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml
.github/workflows/: version_tag.yaml  wheels.yaml
crates/interpolars-py/: Cargo.toml
crates/interpolars-py/src/: expressions.rs  geospatial.rs  lib.rs
crates/rs-interpolate/: Cargo.toml
crates/rs-interpolate/src/: interpolation.rs  lib.rs
docs/: scirs2-cubic-and-makima-issues.md  scirs2-interpolate-issues.md
src/: expressions.rs  geospatial.rs  interpolation.rs  lib.rs
src/interpolars/: __init__.py  _core.pyi
tests/: smoke_test.py  test_1d_interpolation.py  test_2d_interpolation.py  test_3d_interpolation.py  test_4d_interpolation.py  test_datetime_and_duration_coords.py  test_geospatial.py  test_grouped_interpolation.py  test_interpolate_nd_partial_missing_fill.py  test_interpolation_methods.py  test_nan_null_handling.py
