[package]
name = "interpolars"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py39"] }
# Get polars from git
polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.37.1", default-features = false, features = [
    "dtype-struct",
    "dtype-full",
] }
pyo3-polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.37.1", default-features = false, features = [
    "derive",
] }

serde_json = "1.0.145"
serde = "1.0.213"


[profile.release]
opt-level = 1
lto = false
codegen-units = 4