[workspace]
members = ["crates/rs-interpolate", "crates/interpolars-py"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.145"
pyo3 = { version = "0.27.2", features = ["abi3-py39"] }
polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.37.1", default-features = false, features = [
    "dtype-struct",
    "dtype-full",
] }
pyo3-polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.37.1", default-features = false, features = [
    "derive",
] }


[profile.release]
opt-level = 1
lto = false
codegen-units = 4