[project]
name = "interpolars"
version = "0.1.0"
description = "Interpolation plugin for Polars"
readme = "README.md"
authors = [
    { name = "Benjamin Sobel", email = "ben-developer@opayq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars==1.37.1",
]
license = { file = "LICENSE" }
keywords = ["polars", "interpolation", "plugin"]

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
]

[tool.maturin]
module-name = "interpolars._core"
python-packages = ["interpolars"]
python-source = "src"

# Add environment variables to the build process
[tool.maturin.env]
RUST_MIN_STACK = "16777216"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

